--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,13 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="title_onboarding_1">Welcome to Onboarding App !</string>
+    <string name="title_onboarding_1">Welcome to Realtime Auction App!</string>
     <string name="description_onboarding_1">Here is an open-source project which shows sweet &amp; original onboarding ViewPagers that follows Material Design Guidelines</string>
 
-    <string name="title_onboarding_2">Try AirBnB Lottie</string>
+    <string name="title_onboarding_2">Welcome to Realtime Auction App!</string>
     <string name="description_onboarding_2">We use Lottie Animations on our Intro to make it interactive &amp; pleasant. Did you already tried it ? If no, let\'s start now. It\'s just awesome</string>
 
-    <string name="title_onboarding_3">Code beautiful apps</string>
+    <string name="title_onboarding_3">Welcome to Realtime Auction App!</string>
     <string name="description_onboarding_3">Our mission is to make useful &amp; subtle apps. We love help people to save time with open-source stuffs, but we also make life easier by creating new things. Good Coding!</string>
 
     <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
